fixed overflow problem on zoom

--- a/src/styles/ChatBody.module.scss
+++ b/src/styles/ChatBody.module.scss
@@ -27,6 +27,7 @@
     .convo {
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
   
     .recepiantInfo {
